styling nav bar

--- a/digitectoolui/src/Components/Dashboard/DashboardNavBar.css
+++ b/digitectoolui/src/Components/Dashboard/DashboardNavBar.css
@@ -5,14 +5,14 @@ nav.DashboardNavBar {
   border-radius: 10px; */
 }
 
-.DashboardNavBar ul{
+.DashboardNavBar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
-.DashboardNavBar li a{
+.DashboardNavBar li a {
   text-decoration: none;
 }
 
@@ -33,9 +33,16 @@ nav.DashboardNavBar {
 }
 
 .material-symbols-outlined {
-  margin-right: 10px; 
+  margin-right: 10px;
 }
 
 .DashboardNavElement:hover {
-  border-color: #333; /* Dark gray border on hover */
+  border-color: #333; /* Dark gray border on hover or when active */
+}
+
+/* Optionally, you can add a different background color for the active link */
+.DashboardNavElement.active {
+  background-color: #f0f0f0;
+  color: #1a1a1a;
+
 }
