--- a/digitectoolui/src/Components/Dashboard/DashboardNavBar.css
+++ b/digitectoolui/src/Components/Dashboard/DashboardNavBar.css
@@ -24,7 +24,7 @@ nav.DashboardNavBar {
   margin-bottom: 10px; /* Adjust as needed */
   padding: 10px;
   text-decoration: none;
-  border: 2px solid #ddd; /* Light gray border */
+  border: 2px solid #333; /* Light gray border */
   border-radius: 10px;
 }
 
@@ -38,10 +38,9 @@ nav.DashboardNavBar {
 }
 
 .DashboardNavElement:hover {
-  border-color: #333; /* Dark gray border on hover or when active */
+  border-color: #ddd;
 }
 
-/* Optionally, you can add a different background color for the active link */
 .DashboardNavElement.active {
   background-color: #f0f0f0;
   color: #1a1a1a;
