Fixing bugs and update dashboard & employees tab

--- a/digitectoolui/src/Components/Dashboard/DashboardNavBar.css
+++ b/digitectoolui/src/Components/Dashboard/DashboardNavBar.css
@@ -13,7 +13,7 @@ nav.DashboardNavBar {
   white-space: nowrap;
 }
 
-.DashboardNavBar li a {
+.DashboardNavBar li {
   text-decoration: none;
 }
 
@@ -44,5 +44,4 @@ nav.DashboardNavBar {
 .DashboardNavElement.active {
   background-color: #f0f0f0;
   color: #1a1a1a;
-
 }
