--- a/digitectoolui/src/Pages/Dashboard/Employees/Employees.css
+++ b/digitectoolui/src/Pages/Dashboard/Employees/Employees.css
@@ -1,27 +1,43 @@
+.SearchbarContainer {
+    display: flex;
+    align-items: center;
+    margin: 0.4rem 0;
+  }
 
 
-.Searchbar {
-  margin: 0.4rem 0;
-  width: fill;
-  max-width: 75%;
-  color: #fefefe;
-  background-color: #1a1a1a;
-  padding: 0.5rem;
-  border: 2px solid #333;
-  border-radius: 10px;
-}
+  .Searchbar {
+    flex: 1;
+    color: #fefefe;
+    background-color: #1a1a1a;
+    padding: 0.5rem;
+    border: 2px solid #333;
+    border-radius: 10px;
+  }
+  
+  .AddEmployeeLink {
+    text-decoration: none;
+    color: #fefefe;
+    margin-left: 1rem; /* Adjust the margin as needed */
+  }
 
 /* Employee Row */
 
 .EmployeeTable {
+    margin-top: 2rem;
   width: fill;
   border-collapse: collapse;
+}
+
+.EmployeeTitleRow{
+    font-weight: bold;
+    text-align : center;
 }
 
 .EmployeeRow {
     border: 1px solid #333;
     border-left: none;
     border-right: none;
+    text-align : left;
 }
 
 .EmployeeRow:first-child{
@@ -32,7 +48,7 @@
     border-bottom: none;
 }
 
-.EmployeeRow td{
+.EmployeeRow td, .EmployeeRow th{
     padding: 0.5rem;
 }
 
@@ -40,3 +56,4 @@
     text-decoration: none;
     color: #fefefe;
 }
+
