--- a/digitectoolui/src/Components/Dashboard/Dashboard.css
+++ b/digitectoolui/src/Components/Dashboard/Dashboard.css
@@ -10,6 +10,8 @@
   }
 
   .DashboardContendBox {
+    display: flex;
+    flex-direction: column;
     margin: 10px;
     padding: 10px;
     border: 2px solid #333;
