--- a/digitectoolui/src/index.css
+++ b/digitectoolui/src/index.css
@@ -1,8 +1,10 @@
-*{
-  font-family: Roboto,Arial,sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, Arial, sans-serif;
 }
 
-body{
+body {
   background-color: #1a1a1a;
-  color: #FFFFFF;
+  color: #ffffff;
 }
