--- a/digitectoolui/src/Pages/Dashboard/Employees/EmployeesComponents/EmployeesMain.css
+++ b/digitectoolui/src/Pages/Dashboard/Employees/EmployeesComponents/EmployeesMain.css
@@ -22,49 +22,34 @@
 
 /* AddEmployee */
 
-/* .AddEmployeeContainer {
-  display: flex;
-  align-items: center;
-  margin: 0.4rem 0;
-  border: 2px solid #333;
-  border-radius: 10px;
-  padding: 10px;
-  max-height: fit-content;
-} */
-
-/* AddEmployee */
-
 .AddEmployeeContainer {
-
-  overflow: hidden;
-  max-height: 0;
-  /* transition: max-height 0.9s ease-out; */
-}
-
-.AddEmployeeContainer.open {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0.4rem 0;
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.3s ease-out;
+}
+
+.AddEmployeeContainer.open {
   border: 2px solid #333;
   border-radius: 10px;
-  max-height: 1000px; /* Adjust the max-height to a value that accommodates your content */
+  max-height: 1000px;
 }
 
 .AddEmployeeForm {
-  
 }
 
-.DataContainer{
+.DataContainer {
   margin: 1rem;
 }
 
-.DataContainer input , .DataContainer select {
-
+.DataContainer input,
+.DataContainer select {
 }
 
 .AddLabel {
-
 }
 
 /* Employee Row */
