--- a/digitectoolui/src/LayoutComponents/DashboardLayout/DashboardLayoutMain.css
+++ b/digitectoolui/src/LayoutComponents/DashboardLayout/DashboardLayoutMain.css
@@ -1,19 +1,41 @@
 .dashboard-container {
-    display: flex;
-  }
-  /* .nav-container{
+  display: flex;
+}
+/* .nav-container{
 
   } */
-  
-  .main-content {
-    flex-grow: 1;
-  }
 
-  .DashboardContendBox {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    padding: 10px;
-    border: 2px solid #333;
-    border-radius: 10px;
-  }
+.main-content {
+  flex-grow: 1;
+}
+
+/* Dashboard header incl. Searchbar */
+.DashboardContendBox {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius: 10px;
+}
+
+.SearchbarContainer {
+  display: flex;
+  align-items: center;
+  margin: 0.4rem 0;
+}
+
+.Searchbar {
+  flex: 1;
+  color: #fefefe;
+  background-color: #1a1a1a;
+  padding: 0.5rem;
+  border: 2px solid #333;
+  border-radius: 10px;
+}
+
+.SearchBarButtonEnd {
+  text-decoration: none;
+  color: #fefefe;
+  margin-left: 1rem; /* Adjust the margin as needed */
+}
