--- a/digitectoolui/src/Pages/Dashboard/Employees/EmployeesComponents/EmployeesMain.css
+++ b/digitectoolui/src/Pages/Dashboard/Employees/EmployeesComponents/EmployeesMain.css
@@ -1,5 +1,3 @@
-
-
 /* AddEmployee */
 
 .AddEmployeeContainer {
@@ -9,7 +7,7 @@
   margin: 0.4rem 0;
   overflow: hidden;
   max-height: 0;
-  transition: max-height 0.3s ease-out;
+  /* transition: max-height 0.6s ease-out; */
 }
 
 .AddEmployeeContainer.open {
@@ -60,6 +58,10 @@
   border-bottom: none;
 }
 
+.EmployeeRow.open {
+  border-bottom: none;
+}
+
 .EmployeeRow td,
 .EmployeeRow th {
   padding: 0.5rem;
@@ -68,4 +70,16 @@
 .EmployeeLink {
   text-decoration: none;
   color: #fefefe;
+}
+
+/* Employee Detaildata */
+
+.EmployeeDataContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.4rem 0;
+  padding: 0.4rem;
+  border: 2px solid #333;
+  border-radius: 10px;
 }
