--- a/digitectoolui/src/Pages/AdminDashboard/Permissions/AdminPermissionsComponents/AdminPermissionsMain.css
+++ b/digitectoolui/src/Pages/AdminDashboard/Permissions/AdminPermissionsComponents/AdminPermissionsMain.css
@@ -1,28 +1,33 @@
 .RoleLabel {
-    display: inline-flex;
-    align-items: center;
-    margin: 0.2rem;
-    padding: 0.2rem 0.5rem; /* Added padding for better spacing */
-    border: 1px solid; /* Strong border color (green) */
-    border-radius: 10px;
-  }
+  display: inline-flex;
+  align-items: center;
+  margin: 0.2rem;
+  padding: 0.2rem 0.5rem;
+  /* Added padding for better spacing */
+  border: 1px solid;
+  /* Strong border color (green) */
+  border-radius: 10px;
+}
 
 .PermissionBox {
-    display: inline-flex;
-    align-items: center;
-    margin: 0.2rem;
-    padding: 0.2rem;
-    border: 1px solid red;
-    border-radius: 10px;
-    background-color: rgba(255, 0, 0, 0.3);
-  }
-  
-  .PermissionText {
-    margin-right: 4px; /* Space between text and icon */
-  }
-  
-  .PermissionBox span {
-    cursor: pointer;
-    margin-left: 4px; 
-    margin-right: 4px; 
-  }
+  display: inline-flex;
+  align-items: center;
+  margin: 0.2rem;
+  padding: 0.2rem;
+  border: 1px solid red;
+  border-radius: 10px;
+  background-color: rgba(255, 0, 0, 0.3);
+}
+
+.PermissionText {
+  margin-right: 4px;
+  /* Space between text and icon */
+}
+
+.SelectedPermissionText {}
+
+.PermissionBox span {
+  cursor: pointer;
+  margin-left: 4px;
+  margin-right: 4px;
+}
