--- a/digitectoolui/src/Pages/Dashboard/CreateShiftplan/CreateShiftplanComponents/CreateShiftplanMain.css
+++ b/digitectoolui/src/Pages/Dashboard/CreateShiftplan/CreateShiftplanComponents/CreateShiftplanMain.css
@@ -57,9 +57,11 @@
 
 .ShiftDayLabel {
   min-width: 45px; /* Hier die gewünschte Breite festlegen */
+
   padding: 6px 12px;
   border: 2px solid #333;
   border-radius: 5px;
   cursor: pointer;
   text-align: center;
+  font-weight: 500;
 }
