--- a/digitectoolui/src/Pages/Dashboard/Employees/EmployeesComponents/EmployeesMain.css
+++ b/digitectoolui/src/Pages/Dashboard/Employees/EmployeesComponents/EmployeesMain.css
@@ -103,3 +103,11 @@
   outline: none;
   color: #fefefe;
 }
+
+.EmployeeRow .toggleicon {
+  
+}
+
+.EmployeeRow.open .toggleicon {
+  color: red;
+}
