--- a/digitectoolui/src/Pages/Shiftplan/ShiftplanComponents/ShiftplanStyle.css
+++ b/digitectoolui/src/Pages/Shiftplan/ShiftplanComponents/ShiftplanStyle.css
@@ -100,12 +100,12 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-*::-webkit-scrollbar {
+body::-webkit-scrollbar,div::-webkit-scrollbar {
     display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-* {
+body, div {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
