--- a/digitectoolui/src/index.css
+++ b/digitectoolui/src/index.css
@@ -4,6 +4,16 @@
   font-family: Roboto, Arial, sans-serif;
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 body {
   background-color: #1a1a1a;
   color: #ffffff;
