--- a/digitectoolui/src/Pages/Shiftplan/ShiftplanComponents/ShiftplanStyle.css
+++ b/digitectoolui/src/Pages/Shiftplan/ShiftplanComponents/ShiftplanStyle.css
@@ -1,111 +1,102 @@
 /* Styling Worker line */
-.worker{
-    font-size: auto;
-    white-space: nowrap;
+.worker {
+  font-size: auto;
+  white-space: nowrap;
 }
 
-.worker a.name{
-    color: inherit; 
-    text-decoration:none; 
+.worker a.name {
+  color: inherit;
+  text-decoration: none;
 }
 
-/* .worker .role{
-    
-}
-
-.worker .shift{
-    
-} */
-
-.worker .job{
-    font-weight: 600;
-    color: #FF5857;
-    float: right;
+.worker .job {
+  font-weight: 600;
+  color: #ff5857;
+  float: right;
 }
 
 /* Styling Dateheader */
-.DateHeader{
-    padding: 5px 0px;
-    font-size: larger;
+.DateHeader {
+  padding: 5px 0px;
+  font-size: larger;
 }
 
 .DayTableFunctions .btn {
-    background-color: #00559d;
-    height: 40px;
-    width: 40px;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    font-size: 30px;
-    cursor: pointer;
-  }
+  background-color: #00559d;
+  height: 40px;
+  width: 40px;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  font-size: 30px;
+  cursor: pointer;
+}
 
-  .DayTableFunctions .btn:hover{
-    background-color: #054b88;
-  }
+.DayTableFunctions .btn:hover {
+  background-color: #054b88;
+}
 
-@media only screen and (max-width: 600px){
-    .DateHeader{
-        text-align: left;
-        padding-left: 5px;
-    }
+@media only screen and (max-width: 600px) {
+  .DateHeader {
+    text-align: left;
+    padding-left: 5px;
+  }
 }
 
 /* Styling Shiftheader */
-.ShiftHeader{
-    height: 35px;
-    vertical-align:middle;
-    border-radius: 4px;
-    color: black;
+.ShiftHeader {
+  height: 35px;
+  vertical-align: middle;
+  border-radius: 4px;
+  color: black;
 }
 
 /* Styling Workertable */
-.WorkerTable{
-    width: 100%;
+.WorkerTable {
+  width: 100%;
 }
 
 .DoubleWorkTable {
-    min-width: 240px;
+  min-width: 240px;
 }
 
 /* Styling Shifttable*/
-.ShiftTable{
-    /* border: 1px solid blue; */
-    min-width: 280px;
-    margin: 0px 5px;
+.ShiftTable {
+  /* border: 1px solid blue; */
+  min-width: 280px;
+  margin: 0px 5px;
 }
 
-
-
-
 /* Styling Daytable*/
-.DayTable{
-    /* border: 1px solid red; */
-    margin: 20px;
-    background-color: #1f1f1f;
-    border-radius: 15px;
-    padding: 10px;
-    box-shadow: 0px -5px 20px 5px rgba(0, 0, 0, 0.5);
+.DayTable {
+  /* border: 1px solid red; */
+  margin: 20px;
+  background-color: #1f1f1f;
+  border-radius: 15px;
+  padding: 10px;
+  box-shadow: 0px -5px 20px 5px rgba(0, 0, 0, 0.5);
 }
 
 /* Styling the Monthshifttable */
-.ShiftTableMonth{
-    /* border: 4px solid red; */
-    max-width: 100vw;
+.ShiftTableMonth {
+  /* border: 4px solid red; */
+  max-width: 100vw;
 }
 
 .ShiftTableMonthDiv {
-    max-width: 100vw;
-    overflow-x: scroll;
+  max-width: 100vw;
+  overflow-x: scroll;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar,div::-webkit-scrollbar {
-    display: none;
+body::-webkit-scrollbar,
+div::-webkit-scrollbar {
+  display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-body, div {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+body,
+div {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
