adding requets controller

--- a/digitectoolui/src/LayoutComponents/DashboardLayout/DashboardLayoutMain.css
+++ b/digitectoolui/src/LayoutComponents/DashboardLayout/DashboardLayoutMain.css
@@ -39,3 +39,12 @@
   color: #fefefe;
   margin-left: 1rem; /* Adjust the margin as needed */
 }
+
+@media (max-width: 400px) {
+
+  .DashboardContendBox {
+    margin: 5px;
+    padding: 10px;
+    
+  }
+}
