--- a/digitectoolui/src/LayoutComponents/DashboardLayout/DashboardNavBarsMain.css
+++ b/digitectoolui/src/LayoutComponents/DashboardLayout/DashboardNavBarsMain.css
@@ -1,53 +1,62 @@
 nav.DashboardNavBar {
-    margin: 10px;
-    /* padding: 15px; */
-    /* border: 2px solid #ddd;
+  margin: 10px;
+  /* padding: 15px; */
+  /* border: 2px solid #ddd;
     border-radius: 10px; */
+}
+
+.DashboardNavBar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.DashboardNavBar li {
+  text-decoration: none;
+}
+
+.DashboardNavElement {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px; /* Adjust as needed */
+  padding: 10px;
+  text-decoration: none;
+  border: 2px solid #333; /* Light gray border */
+  border-radius: 10px;
+}
+
+.DashboardNavElement {
+  text-decoration: none;
+  color: white;
+}
+
+.DashboardNavBarText {
+  margin-left: 10px;
+}
+
+.DashboardNavElement:hover {
+  border-color: #ddd;
+}
+
+.DashboardNavElement.active {
+  background-color: #f0f0f0;
+  color: #1a1a1a;
+}
+
+@media (max-width: 400px) {
+  nav.DashboardNavBar .DashboardNavBarText {
+    display: none;
   }
-  
-  .DashboardNavBar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    white-space: nowrap;
+  nav.DashboardNavBar {
+    margin: 5px;
   }
-  
-  .DashboardNavBar li {
-    text-decoration: none;
+}
+
+@media (max-width: 900px) {
+  nav.DashboardNavBar {
+    font-size: 0.8rem;
   }
-  
-  .DashboardNavElement {
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px; /* Adjust as needed */
-    padding: 10px;
-    text-decoration: none;
-    border: 2px solid #333; /* Light gray border */
-    border-radius: 10px;
-  }
-  
-  .DashboardNavElement {
-    text-decoration: none;
-    color: white;
-  }
-  
-  .DashboardNavBarText {
-    margin-left: 10px;
-  }
-  
-  .DashboardNavElement:hover {
-    border-color: #ddd;
-  }
-  
-  .DashboardNavElement.active {
-    background-color: #f0f0f0;
-    color: #1a1a1a;
-  }
-  
-  @media (max-width: 400px) {
-    nav.DashboardNavBar {
-      display: none;
-    }
-  }
+}
