--- a/digitectoolui/src/Pages/Login/LoginComponents/LoginMain.css
+++ b/digitectoolui/src/Pages/Login/LoginComponents/LoginMain.css
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   padding: 30px;
-  box-shadow: 0px -5px 20px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 20px 15px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
 }
 
@@ -35,43 +35,6 @@
   transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.label {
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  color: #d4d4d4;
-  pointer-events: none;
-  transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.input:focus {
-  border: 1px solid var(--primary);
-}
-
-.input:valid {
-  border: 1px solid var(--secondary);
-}
-
-.input:is(:focus, :not(:empty)) ~ label {
-  transform: translateY(-120%) scale(0.7);
-  background-color: #1a1a1a;
-  padding-inline: 0.3rem;
-}
-
-.input:is(:valid) ~ label {
-  transform: translateY(-120%) scale(0.7);
-  background-color: #1a1a1a;
-  padding-inline: 0.3rem;
-  color: var(--secondary);
-}
-
-.input:is(:not(:empty)) ~ label {
-  transform: translateY(-120%) scale(0.7);
-  background-color: #1a1a1a;
-  padding-inline: 0.3rem;
-  color: var(--third);
-}
-
 .LoginButton {
   border-radius: 10px;
   padding: 1rem;
@@ -92,7 +55,15 @@
   color: #fefefe;
   background-color: #1a1a1a;
 }
-.errorLabel {
-  color: red;
-  font-size: 12px;
+
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px #1a1a1a inset !important;
+}
+
+input:-webkit-autofill{
+  -webkit-text-fill-color: #fefefe !important;
 }
