--- a/digitectoolui/src/index.css
+++ b/digitectoolui/src/index.css
@@ -10,11 +10,18 @@
 
 /* Hide scrollbar for IE, Edge and Firefox */
 * {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 body {
   background-color: #1a1a1a;
   color: #ffffff;
 }
+
+/* input, select {
+  -webkit-background-clip: text !important;
+ 
+} */
