--- a/digitectoolui/src/LayoutComponents/DashboardLayout/DashboardLayoutMain.css
+++ b/digitectoolui/src/LayoutComponents/DashboardLayout/DashboardLayoutMain.css
@@ -36,7 +36,7 @@
 .SearchBarButtonEnd {
   text-decoration: none;
   color: #fefefe;
-  margin-left: 1rem; /* Adjust the margin as needed */
+  margin-left: 1rem;
 }
 
 @media (max-width: 600px) {
