--- a/digitectoolui/src/LayoutComponents/MainLayout/LayOutMain.css
+++ b/digitectoolui/src/LayoutComponents/MainLayout/LayOutMain.css
@@ -12,6 +12,7 @@
   background-size: cover;
   background-image: url(../../Pictures/DigitecWallpaper.jpg);
   filter: brightness(0.5);
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 .LayOutOutlet {
@@ -19,7 +20,7 @@
 }
 
 @media (max-width: 900px) {
-    .LayOutOutlet {
-        margin-top: 40px;
-      }
+  .LayOutOutlet {
+    margin-top: 40px;
   }
+}
