--- a/digitectoolui/src/Pages/Shiftplan/ShiftplanComponents/ShiftplanStyle.css
+++ b/digitectoolui/src/Pages/Shiftplan/ShiftplanComponents/ShiftplanStyle.css
@@ -70,11 +70,10 @@
 /* Styling Daytable*/
 .DayTable {
   /* border: 1px solid red; */
-  margin: 20px;
+  margin: 10px 20px;
   background-color: #1f1f1f;
   border-radius: 15px;
   padding: 10px;
-  box-shadow: 0px -5px 20px 5px rgba(0, 0, 0, 0.5);
 }
 
 /* Styling the Monthshifttable */
